--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 body {
-  font: 14px "Century Gothic", Futura, sans-serif;
+  font: 20 px "Century Gothic", Futura, sans-serif;
   margin: 20px;
 }
 
 ol, ul {
-  padding-left: 30px;
+  margin: 0px;
+  padding-left: 20px;
 }
 
 .board-row:after {
@@ -13,45 +14,55 @@ ol, ul {
   display: table;
 }
 
+.board-row {
+  height: 5px;
+}
+
+.game-board {
+  text-align: center;
+}
+
 .status {
-  margin-bottom: 10px;
+  margin-bottom: 0px;
 }
 
 .square {
   background: #fff;
   border: 1px solid #999;
   float: left;
-  font-size: 24px;
+  font-size: 36px;
   font-weight: bold;
-  line-height: 34px;
-  height: 34px;
+  line-height: 54px;
+  height: 54px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 54px;
 }
 
 .currStep {
   background: #f00;
+  font-size: 18px;
 }
 .nonCurrStep {
   background: #999;
+  font-size: 18px;
 }
 
 .squareHighlighted {
   background: #f00;
   border: 1px solid #999;
   float: left;
-  font-size: 24px;
+  font-size: 36px;
   font-weight: bold;
-  line-height: 34px;
-  height: 34px;
+  line-height: 54px;
+  height: 54px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 54px;
 }
 
 .square:focus {
@@ -68,6 +79,6 @@ ol, ul {
 }
 
 .game-info {
-  margin-left: 20px;
+  margin-left: 0px;
 }
 
