--- a/src/index.css
+++ b/src/index.css
@@ -30,19 +30,19 @@ ol, ul {
   background: #fff;
   border: 1px solid #999;
   float: left;
-  font-size: 36px;
+  font-size: 48px;
   font-weight: bold;
-  line-height: 54px;
-  height: 54px;
+  line-height: 60px;
+  height: 60px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 54px;
+  width: 60px;
 }
 
 .currStep {
-  background: #f00;
+  background: #0f0;
   font-size: 18px;
 }
 .nonCurrStep {
@@ -54,15 +54,15 @@ ol, ul {
   background: #f00;
   border: 1px solid #999;
   float: left;
-  font-size: 36px;
+  font-size: 48px;
   font-weight: bold;
-  line-height: 54px;
-  height: 54px;
+  line-height: 60px;
+  height: 60px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 54px;
+  width: 60px;
 }
 
 .square:focus {
